centered the header/social links, remove some padding on buttons

--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
       <div class="row">
         <div class="col-sm-12">
           <h1 class="name">Brad Hoffman</h1>
-          <span class="socialIcons">
+          <br>
+          <h6 class="socialIcons">
             <a href="https://github.com/bkhoffman" target="_blank">
               <i class="fab fa-github-square fa-2x"></i>
             </a>
             <a href="https://www.linkedin.com/in/bkhoffman" target="_blank">
               <i class="fab fa-linkedin fa-2x"></i>
             </a>
-          </span> 
+          </h6> 
         </div>
       </div>
     </div>
