fixed spacing for project modal

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         </div>
         <div class="modal-body">
           <div class="row">
-            <div class="col-sm-6">
-              <div class="card d-flex flex-wrap justify-content-center" style="width: 18rem; text-align: center">
+            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+              <div class="card work">
                 <a href="https://bkhoffman.github.io/Complement/" target="_blank">
                   <img src="./assets/images/Complement.png" class="card-img-top" alt="Complement App Image">
                   <div class="card-body">
@@ -136,8 +136,8 @@
                 </a>
               </div>
             </div>
-            <div class="col-sm-6">
-              <div class="card d-flex flex-wrap justify-content-center" style="width: 18rem; text-align: center">
+            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+              <div class="card work">
                 <a href="https://bkhoffman.github.io/Movie-Trivia-Game/" target="_blank">
                   <img src="./assets/images/TriviaGame.png" class="card-img-top" alt="Movie Trivia Image">
                   <div class="card-body">
@@ -149,8 +149,8 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-6">
-              <div class="card d-flex flex-wrap justify-content-center" style="width: 18rem; text-align: center">
+            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+              <div class="card work">
                 <a href="https://bkhoffman.github.io/Train-Time/" target="_blank">
                   <img src="./assets/images/TrainTime.png" class="card-img-top" alt="Train Time App Image">
                   <div class="card-body">
@@ -160,8 +160,8 @@
                 </a>
               </div>
             </div>
-            <div class="col-sm-6">
-              <div class="card d-flex flex-wrap justify-content-center" style="width: 18rem; text-align: center">
+            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+              <div class="card work">
                 <a href="https://bkhoffman.github.io/Word-Guess-Game/" target="_blank">
                   <img src="./assets/images/MovieHangman.png" class="card-img-top" alt="Movie Hangman Image">
                   <div class="card-body">
