updated some typos and added content to the About Me modal

--- a/index.html
+++ b/index.html
@@ -98,16 +98,20 @@
             <div class="col-sm-12">
               <img id="about-image" src="./assets/images/avatar.png" alt="About Me Picture">
               <p>Full Stack Web Developer with experience in digital marketing and e-commerce. With a Business
-                degree from KU, I started and successfully run a promotional products business for 13 years, creating a
+                degree from KU, I started and successfully ran a promotional products business for 13 years, creating a
                 strong
-                background in all aspects of business including: operations, graphic design, accounting, marketing, and
+                background in all aspects of business including: operations, customer service, graphic design, accounting, marketing, and
                 social
-                media. Working with many types of people has taught me to be adaptable to different personalities,
+                media.
+              </p>
+              <p>
+                Working with many types of people has taught me to be adaptable to different personalities,
                 making
                 collaboration to develop web applications smoother and more efficient. Developing skills include: HTML,
                 CSS,
-                Bootstrap, Javascript, jQuery, Firebase as well as working with APIs. Passionate about conquering new
-                challenges and learning new skills.</p>
+                Bootstrap, Javascript, jQuery, Firebase, Node.js as well as working with APIs. Passionate about overcoming new
+                challenges and learning new skills.
+              </p>
             </div>
           </div>
         </div>
