fixed button hover for the main 4 catagories

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col sm 3">
-        <button class="card bg-dark text-white" data-toggle="modal" data-target="#aboutModal">
+        <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#aboutModal">
           <img src="./assets/images/aboutImg.png" class="card-img" alt="About Me Card Img">
           <div class="card-img-overlay">
             <h5 class="card-title"></h5>
@@ -59,7 +59,7 @@
         </button>
       </div>
       <div class="col sm 3">
-        <button class="card bg-dark text-white" data-toggle="modal" data-target="#portModal">
+        <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#portModal">
           <img src="./assets/images/portfolioImg.png" class="card-img" alt="Portfolio Card Img">
           <div class="card-img-overlay">
             <h5 class="card-title"></h5>
@@ -67,7 +67,7 @@
         </button>
       </div>
       <div class="col sm 3">
-        <button class="card bg-dark text-white" data-toggle="modal" data-target="#resumeModal">
+        <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#resumeModal">
           <img src="./assets/images/resumeImg.png" class="card-img" alt="Resume Card Img">
           <div class="card-img-overlay">
             <h5 class="card-title"></h5>
@@ -75,7 +75,7 @@
         </button>
       </div>
       <div class="col sm 3">
-        <button class="card bg-dark text-white" data-toggle="modal" data-target="#contactModal">
+        <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#contactModal">
           <img src="./assets/images/contactImg.png" class="card-img" alt="Contact Me Card Img">
           <div class="card-img-overlay">
             <h5 class="card-title"></h5>
