--- a/index.html
+++ b/index.html
@@ -176,6 +176,30 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+              <div class="card work">
+                <a href="https://eat-a-burger-bkh.herokuapp.com/" target="_blank">
+                  <img src="./assets/images/EatABurger.png" class="card-img-top" alt="Eat A Burger App Image">
+                  <div class="card-body">
+                    <h5 class="card-title">Eat A Burger</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">App Using Handlebars and Sql</h6>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+              <div class="card work">
+                <a href="https://bkhoffman.github.io/Word-Guess-Game/" target="_blank">
+                  <img src="./assets/images/MovieHangman.png" class="card-img-top" alt="Movie Hangman Image">
+                  <div class="card-body">
+                    <h5 class="card-title">Movie Hangman</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Word Guess Game</h6>
+                  </div>
+                </a>
+              </div>
+            </div> -->
+          </div>
         </div>
       </div>
     </div>
