added Friend Finder to Port

--- a/index.html
+++ b/index.html
@@ -188,17 +188,17 @@
                 </a>
               </div>
             </div>
-            <!-- <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
               <div class="card work">
-                <a href="https://bkhoffman.github.io/Word-Guess-Game/" target="_blank">
-                  <img src="./assets/images/MovieHangman.png" class="card-img-top" alt="Movie Hangman Image">
+                <a href="https://friendfinder-bkh.herokuapp.com/" target="_blank">
+                  <img src="./assets/images/FriendFinder.png" class="card-img-top" alt="Friend Finder Image">
                   <div class="card-body">
-                    <h5 class="card-title">Movie Hangman</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Word Guess Game</h6>
+                    <h5 class="card-title">Friend Finder</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">App uses Express to Match Input with Most Compatible Friend</h6>
                   </div>
                 </a>
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
