made card responsive to screen size

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   </div>
   <div class="container-fluid">
     <div class="row">
-      <div class="col sm 3">
+      <div class="col-12 col-sm-6 col-md-3">
         <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#aboutModal">
           <img src="./assets/images/aboutImg.png" class="card-img" alt="About Me Card Img">
           <div class="card-img-overlay">
@@ -58,7 +58,7 @@
           </div>
         </button>
       </div>
-      <div class="col sm 3">
+      <div class="col-12 col-sm-6 col-md-3">
         <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#portModal">
           <img src="./assets/images/portfolioImg.png" class="card-img" alt="Portfolio Card Img">
           <div class="card-img-overlay">
@@ -66,7 +66,7 @@
           </div>
         </button>
       </div>
-      <div class="col sm 3">
+      <div class="col-12 col-sm-6 col-md-3">
         <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#resumeModal">
           <img src="./assets/images/resumeImg.png" class="card-img" alt="Resume Card Img">
           <div class="card-img-overlay">
@@ -74,7 +74,7 @@
           </div>
         </button>
       </div>
-      <div class="col sm 3">
+      <div class="col-12 col-sm-6 col-md-3">
         <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#contactModal">
           <img src="./assets/images/contactImg.png" class="card-img" alt="Contact Me Card Img">
           <div class="card-img-overlay">
