--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 making
                 collaboration to develop web applications smoother and more efficient. Developing skills include: HTML,
                 CSS,
-                Bootstrap, Javascript, jQuery, Firebase, Node.js as well as working with APIs. Passionate about overcoming new
+                Bootstrap, Javascript, jQuery, Firebase, Node.js, Ajax, SQL, Sequelize, Express, Handlebars, MongoDB, and React. Passionate about overcoming new
                 challenges and learning new skills.
               </p>
             </div>
@@ -140,13 +140,14 @@
                 </a>
               </div>
             </div>
+
             <div class="col-sm-6 d-flex flex-wrap justify-content-center">
               <div class="card work">
-                <a href="https://bkhoffman.github.io/Movie-Trivia-Game/" target="_blank">
-                  <img src="./assets/images/TriviaGame.png" class="card-img-top" alt="Movie Trivia Image">
+                <a href="https://kc-datenight.herokuapp.com/" target="_blank">
+                  <img src="./assets/images/DateNightKC.png" class="card-img-top" alt="Date Night KC Image">
                   <div class="card-body">
-                    <h5 class="card-title">Movie Trivia</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Timed Movie Trivia Game</h6>
+                    <h5 class="card-title">Date Night KC</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">App populates date suggestions from a database based on interests</h6>
                   </div>
                 </a>
               </div>
@@ -199,6 +200,30 @@
                 </a>
               </div>
             </div>
+          </div>
+          <div class="row">
+            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+              <div class="card work">
+                <a href="https://bkhoffman.github.io/Movie-Trivia-Game/" target="_blank">
+                  <img src="./assets/images/TriviaGame.png" class="card-img-top" alt="Movie Trivia Image">
+                  <div class="card-body">
+                    <h5 class="card-title">Movie Trivia</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Timed Movie Trivia Game</h6>
+                  </div>
+                </a>
+              </div>
+            </div>
+            <!-- <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+              <div class="card work">
+                <a href="https://friendfinder-bkh.herokuapp.com/" target="_blank">
+                  <img src="./assets/images/FriendFinder.png" class="card-img-top" alt="Friend Finder Image">
+                  <div class="card-body">
+                    <h5 class="card-title">Friend Finder</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">App uses Express to Match Input with Most Compatible Friend</h6>
+                  </div>
+                </a>
+              </div>
+            </div> -->
           </div>
         </div>
       </div>
