update images for more responsiveness

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Berkshire+Swash' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -18,9 +21,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.js"></script>
   <!--validation lib-->
@@ -53,6 +53,7 @@
       <div class="col-12 col-sm-6 col-md-3">
         <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#aboutModal">
           <img src="./assets/images/aboutImg.png" class="card-img" alt="About Me Card Img">
+          <img src="./assets/images/aboutImg-sm.png" class="card-img-sm" alt="Portfolio Card Img">
           <div class="card-img-overlay">
             <h5 class="card-title"></h5>
           </div>
@@ -61,6 +62,7 @@
       <div class="col-12 col-sm-6 col-md-3">
         <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#portModal">
           <img src="./assets/images/portfolioImg.png" class="card-img" alt="Portfolio Card Img">
+          <img src="./assets/images/portfolioImg-sm.png" class="card-img-sm" alt="Portfolio Card Img">
           <div class="card-img-overlay">
             <h5 class="card-title"></h5>
           </div>
@@ -69,6 +71,7 @@
       <div class="col-12 col-sm-6 col-md-3">
         <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#resumeModal">
           <img src="./assets/images/resumeImg.png" class="card-img" alt="Resume Card Img">
+          <img src="./assets/images/resumeImg-sm.png" class="card-img-sm" alt="Resume Card Img">
           <div class="card-img-overlay">
             <h5 class="card-title"></h5>
           </div>
@@ -77,6 +80,7 @@
       <div class="col-12 col-sm-6 col-md-3">
         <button class="card bg-dark text-white" id="btn" data-toggle="modal" data-target="#contactModal">
           <img src="./assets/images/contactImg.png" class="card-img" alt="Contact Me Card Img">
+          <img src="./assets/images/contactImg-sm.png" class="card-img-sm" alt="Contact Me Card Img">
           <div class="card-img-overlay">
             <h5 class="card-title"></h5>
           </div>
