update resume, add GoWashKC

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="card d-flex flex-wrap justify-content-center" style="width: auto; text-align: center">
-                <a href="https://docs.google.com/document/d/1bzk3PSjL7Euj_xRStIPVsKPOq8pyIiVcUaoGHcQ56Fk/edit?usp=sharing"
+                <a href="https://docs.google.com/document/d/1A-Jw2FyiumEpro7MUemZ999I-U8SAwq-8ICMq1wm9G4/edit?usp=sharing"
                   target="_blank">
                   <img src="./assets/images/Resume.png" class="card-img-top" alt="Resume">
                   <div class="card-body">
@@ -274,7 +274,7 @@
           <div class="row">
             <div class="col-sm-12">
               <div class="card d-flex flex-wrap" style="width: auto;">
-                <form class="contactForm">
+                <form action="mailto:bkhoffman@gmail.com" method="post" enctype="text/plain" class="contactForm">
                   <div class="form-group">
                     <label for="nameInput">Name:</label>
                     <input type="name" class="form-control" id="nameInput" placeholder="John Doe">
