updated portfolio page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-  crossorigin="anonymous"></script>
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
@@ -43,7 +43,7 @@
             <a href="https://www.linkedin.com/in/bkhoffman" target="_blank">
               <i class="fab fa-linkedin fa-2x"></i>
             </a>
-          </h6> 
+          </h6>
         </div>
       </div>
     </div>
@@ -104,7 +104,8 @@
               <p>Full Stack Web Developer with experience in digital marketing and e-commerce. With a Business
                 degree from KU, I started and successfully ran a promotional products business for 13 years, creating a
                 strong
-                background in all aspects of business including: operations, customer service, graphic design, accounting, marketing, and
+                background in all aspects of business including: operations, customer service, graphic design,
+                accounting, marketing, and
                 social
                 media.
               </p>
@@ -113,7 +114,8 @@
                 making
                 collaboration to develop web applications smoother and more efficient. Developing skills include: HTML,
                 CSS,
-                Bootstrap, Javascript, jQuery, Firebase, Node.js, Ajax, SQL, Sequelize, Express, Handlebars, MongoDB, and React. Passionate about overcoming new
+                Bootstrap, Javascript, jQuery, Firebase, Node.js, Ajax, SQL, Sequelize, Express, Handlebars, MongoDB,
+                and React. Passionate about overcoming new
                 challenges and learning new skills.
               </p>
             </div>
@@ -139,7 +141,7 @@
                   <img src="./assets/images/Complement.png" class="card-img-top" alt="Complement App Image">
                   <div class="card-body">
                     <h5 class="card-title">Complement</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Food and Beer Pairing App</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Food and Beer Pairing App using multiple APIs</h6>
                   </div>
                 </a>
               </div>
@@ -151,31 +153,32 @@
                   <img src="./assets/images/DateNightKC.png" class="card-img-top" alt="Date Night KC Image">
                   <div class="card-body">
                     <h5 class="card-title">Date Night KC</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">App populates date suggestions from a database based on interests</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">App populates date suggestions from a database based on
+                      interests</h6>
                   </div>
                 </a>
               </div>
             </div>
           </div>
           <div class="row">
+            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+              <div class="card work">
+                <a href="https://go-wash-kc.herokuapp.com/" target="_blank">
+                  <img src="./assets/images/GoWashKC.png" class="card-img-top" alt="Go Wash KC Image">
+                  <div class="card-body">
+                    <h5 class="card-title">Go Wash KC</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Full Stack App with Express JS, SQL, React JS/ Redux and Node JS</h6>
+                  </div>
+                </a>
+              </div>
+            </div>
             <div class="col-sm-6 d-flex flex-wrap justify-content-center">
               <div class="card work">
                 <a href="https://bkhoffman.github.io/Train-Time/" target="_blank">
                   <img src="./assets/images/TrainTime.png" class="card-img-top" alt="Train Time App Image">
                   <div class="card-body">
                     <h5 class="card-title">Train Time</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Train Timing App</h6>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
-              <div class="card work">
-                <a href="https://bkhoffman.github.io/Word-Guess-Game/" target="_blank">
-                  <img src="./assets/images/MovieHangman.png" class="card-img-top" alt="Movie Hangman Image">
-                  <div class="card-body">
-                    <h5 class="card-title">Movie Hangman</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Word Guess Game</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Timing App uses Firebase and MomentJS</h6>
                   </div>
                 </a>
               </div>
@@ -184,22 +187,22 @@
           <div class="row">
             <div class="col-sm-6 d-flex flex-wrap justify-content-center">
               <div class="card work">
-                <a href="https://eat-a-burger-bkh.herokuapp.com/" target="_blank">
-                  <img src="./assets/images/EatABurger.png" class="card-img-top" alt="Eat A Burger App Image">
+                <a href="https://bkhoffman.github.io/Word-Guess-Game/" target="_blank">
+                  <img src="./assets/images/MovieHangman.png" class="card-img-top" alt="Movie Hangman Image">
                   <div class="card-body">
-                    <h5 class="card-title">Eat A Burger</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">App Using Handlebars and Sql</h6>
+                    <h5 class="card-title">Movie Hangman</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Word Guess Game using Javascript</h6>
                   </div>
                 </a>
               </div>
             </div>
             <div class="col-sm-6 d-flex flex-wrap justify-content-center">
               <div class="card work">
-                <a href="https://friendfinder-bkh.herokuapp.com/" target="_blank">
-                  <img src="./assets/images/FriendFinder.png" class="card-img-top" alt="Friend Finder Image">
+                <a href="https://eat-a-burger-bkh.herokuapp.com/" target="_blank">
+                  <img src="./assets/images/EatABurger.png" class="card-img-top" alt="Eat A Burger App Image">
                   <div class="card-body">
-                    <h5 class="card-title">Friend Finder</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">App uses Express to Match Input with Most Compatible Friend</h6>
+                    <h5 class="card-title">Eat A Burger</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">App Using Handlebars and SQL</h6>
                   </div>
                 </a>
               </div>
@@ -217,17 +220,18 @@
                 </a>
               </div>
             </div>
-            <!-- <div class="col-sm-6 d-flex flex-wrap justify-content-center">
+            <div class="col-sm-6 d-flex flex-wrap justify-content-center">
               <div class="card work">
                 <a href="https://friendfinder-bkh.herokuapp.com/" target="_blank">
                   <img src="./assets/images/FriendFinder.png" class="card-img-top" alt="Friend Finder Image">
                   <div class="card-body">
                     <h5 class="card-title">Friend Finder</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">App uses Express to Match Input with Most Compatible Friend</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">App uses Express to Match Input with Most Compatible
+                      Friend</h6>
                   </div>
                 </a>
               </div>
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
